--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!-- Bagian 3: Tampilan Daftar Tugas (Awalnya Tersembunyi) -->
         <section class="task-list-view hidden">
             <div class="list-header">
-                <button id="back-to-dashboard-btn">&larr; Kembali</button>
+                <button id="back-to-dashboard-btn">&larr;</button>
                 <h2 id="list-title">Prioritas Tugas</h2>
             </div>
             <div id="task-list-container"></div>
