--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <!-- Footer Aplikasi -->
         <footer class="app-footer">
-            <p>&copy; 2024 Dibuat oleh Akbar Ramadhan</p>
+            <p>&copy; 2025 Akbar Ramadhan | Dikembangkan dengan AI: IBM Granite</p>
         </footer>
 
     </div>
